--- a/src/Aw/Frontend/TemplateBundle/Resources/views/index.html.twig
+++ b/src/Aw/Frontend/TemplateBundle/Resources/views/index.html.twig
@@ -95,31 +95,39 @@
                 <div class="col-sm-9 padding-right">
                     <div class="features_items"><!--features_items-->
                         <h2 class="title text-center">Planes Hosting</h2>
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="images/home/product1.jpg" alt="" />
-                                        <h2>$56</h2>
-                                        <p>Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                    </div>
-                                    <div class="product-overlay">
-                                        <div class="overlay-content">
-                                            <h2>$56</h2>
-                                            <p>Easy Polo Black Edition</p>
-                                            <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+                        {% for hostingplan in hostingplans %}
+                            <div class="col-sm-4">
+                                <div class="product-image-wrapper">
+                                    <div class="single-products">
+                                        <div class="productinfo text-center">
+                                            <img src="images/home/product1.jpg" alt="" />
+                                            <p>{{ hostingplan.plan }}</p>
+                                            <h2>$ {{ hostingplan.register }}</h2>
+                                            <h2>{{ dump(hostingplan) }}</h2>
+                                            <p><strong>Espacio: </strong>Easy Polo Black Edition<br>
+                                                <strong>Transferencia: </strong> Easy Polo Black Edition</p>
+                                            <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Añadir a la cesta</a>
+                                        </div>
+                                        <div class="product-overlay">
+                                            <div class="overlay-content">
+                                                <p>{{ hostingplan.plan }}</p>
+                                                <h2>$  c    {{ hostingplan.register }}</h2>
+                                                <p>Easy Polo Black Edition<br>
+                                                    Easy Polo Black Edition</p>
+                                                <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Añadir a la cesta</a>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="choose">
-                                    <ul class="nav nav-pills nav-justified">
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
-                                    </ul>
+                                    <div class="choose">
+                                        <ul class="nav nav-pills nav-justified">
+                                            <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
+                                            <li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        {% endfor %}
+<!--
                         <div class="col-sm-4">
                             <div class="product-image-wrapper">
                                 <div class="single-products">
@@ -247,7 +255,7 @@
                                 </div>
                             </div>
                         </div>
-
+-->
                     </div><!--features_items-->
 
                     <div class="category-tab"><!--category-tab-->
