--- a/src/Aw/Frontend/TemplateBundle/Resources/views/index.html.twig
+++ b/src/Aw/Frontend/TemplateBundle/Resources/views/index.html.twig
@@ -71,17 +71,29 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="left-sidebar">
-                        <h2>Características</h2>
+                        <h2>Todos los planes contienen:</h2>
                         <div class="brands_products"><!--brands_products-->
                             <div class="brands-name">
                                 <ul class="nav nav-pills nav-stacked">
-                                    <li><a href="#"> <span class="pull-right">(50)</span>Acne</a></li>
-                                    <li><a href="#"> <span class="pull-right">(56)</span>Grüne Erde</a></li>
-                                    <li><a href="#"> <span class="pull-right">(27)</span>Albiro</a></li>
-                                    <li><a href="#"> <span class="pull-right">(32)</span>Ronhill</a></li>
-                                    <li><a href="#"> <span class="pull-right">(5)</span>Oddmolly</a></li>
-                                    <li><a href="#"> <span class="pull-right">(9)</span>Boudestijn</a></li>
-                                    <li><a href="#"> <span class="pull-right">(4)</span>Rösch creative culture</a></li>
+                                    <li><a href="#"> <span class="pull-right">Ilimitado</span>Correo POP3</a></li>
+                                    <li><a href="#"> <span class="pull-right">Cpanel</span>Panel de Control</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>Acceso FTP</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>WebMail</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>AutoContestadores</a></li>
+                                    <li><a href="#"> <span class="pull-right">Ilimatadas</span>Listas de Correo</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>Cuenta Predeterminada</a></li>
+                                    <li><a href="#"> <span class="pull-right">Ilimitado</span>Redireccionamiento de Correo</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>Filtro Anti-Spam</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>Perl</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>PHP</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>MySql</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>phpMyAdmin</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>MySql</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>phpmyadmin</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>Cuentas FTP</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>Administrador de Archivos via Web</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>Estadisticas Gráficas</a></li>
+                                    <li><a href="#"> <span class="pull-right">SI</span>Páginas de Error Predeterminadas</a></li>
                                 </ul>
                             </div>
                         </div><!--/brands_products-->
@@ -647,3 +659,17 @@
         </div>
     </section>
 {% endblock section_two %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
