--- a/src/Aw/Frontend/TemplateBundle/Resources/public/main/main.css
+++ b/src/Aw/Frontend/TemplateBundle/Resources/public/main/main.css
@@ -836,7 +836,7 @@ h2.title:before{
 
 
 h2.title {
-  color: #0086B3;
+  color: #FE980F;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 700;
