--- a/src/Aw/Frontend/TemplateBundle/Resources/views/index.html.twig
+++ b/src/Aw/Frontend/TemplateBundle/Resources/views/index.html.twig
@@ -14,9 +14,9 @@
                         <div class="carousel-inner">
                             <div class="item active">
                                 <div class="col-sm-6">
-                                    <h1><span>E</span>-SHOPPER</h1>
-                                    <h2>Free E-Commerce Template</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                    <h1><span>DAMASCO </span>-SOLUTIONS</h1>
+                                    <h2>El mejor hosting de Uruguay</h2>
+                                    <p>Compre su hosting con total seguridad</p>
                                     <button type="button" class="btn btn-default get">Get it now</button>
                                 </div>
                                 <div class="col-sm-6">
@@ -26,9 +26,9 @@
                             </div>
                             <div class="item">
                                 <div class="col-sm-6">
-                                    <h1><span>E</span>-SHOPPER</h1>
-                                    <h2>100% Responsive Design</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                    <h1><span>DAMASCO </span>-SOLUTIONS</h1>
+                                    <h2>El mejor hosting de Uruguay</h2>
+                                    <p>Compre su hosting con total seguridad</p>
                                     <button type="button" class="btn btn-default get">Get it now</button>
                                 </div>
                                 <div class="col-sm-6">
@@ -39,9 +39,9 @@
 
                             <div class="item">
                                 <div class="col-sm-6">
-                                    <h1><span>E</span>-SHOPPER</h1>
-                                    <h2>Free Ecommerce Template</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                    <h1><span>DAMASCO </span>-SOLUTIONS</h1>
+                                    <h2>El mejor hosting de Uruguay</h2>
+                                    <p>Compre su hosting con total seguridad</p>
                                     <button type="button" class="btn btn-default get">Get it now</button>
                                 </div>
                                 <div class="col-sm-6">
@@ -75,25 +75,25 @@
                         <div class="brands_products"><!--brands_products-->
                             <div class="brands-name">
                                 <ul class="nav nav-pills nav-stacked">
-                                    <li><a href="#"> <span class="pull-right">Ilimitado</span>Correo POP3</a></li>
-                                    <li><a href="#"> <span class="pull-right">Cpanel</span>Panel de Control</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>Acceso FTP</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>WebMail</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>AutoContestadores</a></li>
-                                    <li><a href="#"> <span class="pull-right">Ilimatadas</span>Listas de Correo</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>Cuenta Predeterminada</a></li>
-                                    <li><a href="#"> <span class="pull-right">Ilimitado</span>Redireccionamiento de Correo</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>Filtro Anti-Spam</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>Perl</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>PHP</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>MySql</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>phpMyAdmin</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>MySql</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>phpmyadmin</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>Cuentas FTP</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>Administrador de Archivos via Web</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>Estadisticas Gráficas</a></li>
-                                    <li><a href="#"> <span class="pull-right">SI</span>Páginas de Error Predeterminadas</a></li>
+                                    <li><span class="pull-right">Ilimitado</span>Correo POP3</li>
+                                    <li><span class="pull-right">Cpanel</span>Panel de Control</li>
+                                    <li><span class="pull-right">Si</span>Acceso FTP</li>
+                                    <li><span class="pull-right">Si</span>WebMail</li>
+                                    <li><span class="pull-right">Si</span>AutoContestadores</li>
+                                    <li><span class="pull-right">Ilimitado</span>Listas de Correo</li>
+                                    <li><span class="pull-right">SI</span>Cuenta Predeterminada</li>
+                                    <li><span class="pull-right">Ilimitado</span>Redireccionamiento de Correo</li>
+                                    <li><span class="pull-right">Si</span>Filtro Anti-Spam</li>
+                                    <li><span class="pull-right">Si</span>Perl</li>
+                                    <li><span class="pull-right">Si</span>PHP</li>
+                                    <li><span class="pull-right">Si</span>MySql</li>
+                                    <li><span class="pull-right">Si</span>phpMyAdmin</li>
+                                    <li><span class="pull-right">Si</span>MySql</li>
+                                    <li><span class="pull-right">Si</span>phpmyadmin</li>
+                                    <li><span class="pull-right">Si</span>Cuentas FTP</li>
+                                    <li><span class="pull-right">Si</span>Administrador de Archivos via Web</li>
+                                    <li><span class="pull-right">Si</span>Estadisticas Gráficas</li>
+                                    <li><span class="pull-right">Si</span>Páginas de Error Predeterminadas</li>
                                 </ul>
                             </div>
                         </div><!--/brands_products-->
@@ -138,135 +138,6 @@
                                 </div>
                             </div>
                         {% endfor %}
-<!--
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="images/home/product2.jpg" alt="" />
-                                        <h2>$56</h2>
-                                        <p>Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                    </div>
-                                    <div class="product-overlay">
-                                        <div class="overlay-content">
-                                            <h2>$56</h2>
-                                            <p>Easy Polo Black Edition</p>
-                                            <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="choose">
-                                    <ul class="nav nav-pills nav-justified">
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="images/home/product3.jpg" alt="" />
-                                        <h2>$56</h2>
-                                        <p>Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                    </div>
-                                    <div class="product-overlay">
-                                        <div class="overlay-content">
-                                            <h2>$56</h2>
-                                            <p>Easy Polo Black Edition</p>
-                                            <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="choose">
-                                    <ul class="nav nav-pills nav-justified">
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="images/home/product4.jpg" alt="" />
-                                        <h2>$56</h2>
-                                        <p>Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                    </div>
-                                    <div class="product-overlay">
-                                        <div class="overlay-content">
-                                            <h2>$56</h2>
-                                            <p>Easy Polo Black Edition</p>
-                                            <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                        </div>
-                                    </div>
-                                    <img src="images/home/new.png" class="new" alt="" />
-                                </div>
-                                <div class="choose">
-                                    <ul class="nav nav-pills nav-justified">
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="images/home/product5.jpg" alt="" />
-                                        <h2>$56</h2>
-                                        <p>Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                    </div>
-                                    <div class="product-overlay">
-                                        <div class="overlay-content">
-                                            <h2>$56</h2>
-                                            <p>Easy Polo Black Edition</p>
-                                            <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                        </div>
-                                    </div>
-                                    <img src="images/home/sale.png" class="new" alt="" />
-                                </div>
-                                <div class="choose">
-                                    <ul class="nav nav-pills nav-justified">
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="product-image-wrapper">
-                                <div class="single-products">
-                                    <div class="productinfo text-center">
-                                        <img src="images/home/product6.jpg" alt="" />
-                                        <h2>$56</h2>
-                                        <p>Easy Polo Black Edition</p>
-                                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                    </div>
-                                    <div class="product-overlay">
-                                        <div class="overlay-content">
-                                            <h2>$56</h2>
-                                            <p>Easy Polo Black Edition</p>
-                                            <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="choose">
-                                    <ul class="nav nav-pills nav-justified">
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to wishlist</a></li>
-                                        <li><a href="#"><i class="fa fa-plus-square"></i>Add to compare</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
--->
                     </div><!--features_items-->
 
                     <div class="category-tab"><!--category-tab-->
