--- a/src/Aw/Frontend/TemplateBundle/Resources/views/base.html.twig
+++ b/src/Aw/Frontend/TemplateBundle/Resources/views/base.html.twig
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="logo pull-left">
-                        <a href="index.html"><img src="{{ asset('bundles/awfrontendtemplate/main/images/home/logo.png') }}" alt="" /></a>
+                        <a href="{{ path('frontend_index') }}"><img src="{{ asset('bundles/awfrontendtemplate/main/images/home/logo.png') }}" alt="" /></a>
                     </div>
                 </div>
                 <div class="col-sm-8">
