--- a/src/Aw/Frontend/TemplateBundle/Resources/views/Cart/index.html.twig
+++ b/src/Aw/Frontend/TemplateBundle/Resources/views/Cart/index.html.twig
@@ -11,95 +11,127 @@
             <div class="table-responsive cart_info">
                 <table class="table table-condensed">
                     <thead>
-                    <tr class="cart_menu">
-                        <td class="image">Item</td>
-                        <td class="description"></td>
-                        <td class="price">Price</td>
-                        <td class="quantity">Quantity</td>
-                        <td class="total">Total</td>
+                        <tr class="cart_menu">
+                            <td colspan="6" class="image">1. Dominio</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="cart_product">
+                                <input type="radio" name="sex" value="male" checked> Registrar un dominio<br>
+                                <input type="radio" name="sex" value="female"> Ya poseo mi propio dominio
+                            </td>
+                            <td>
+                                <input type="text">
+                                <input type="text">
+                                <select>
+                                    <option value="com">com</option>
+                                    <option value="org">org</option>
+                                    <option value="net">net</option>
+                                </select>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+
+            <div class="table-responsive cart_info">
+                <table class="table table-condensed">
+                    <thead>
+                        <tr class="cart_menu">
+                            <td colspan="6" class="image">2. Seleccionar el tipo de hosting</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td class="cart_product">
+                            <select>
+                                <option value="com">Basico</option>
+                                <option value="org">Estandar</option>
+                            </select>
+                        </td>
                         <td></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="table-responsive cart_info">
+                <table class="table table-condensed">
+                    <thead>
+                    <tr class="cart_menu">
+                        <td colspan="6" class="image">3. M&eacute;dio de Pago</td>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <td class="cart_product">
-                            <a href=""><img src="images/cart/one.png" alt=""></a>
+                            <input type="radio" name="sex" value="male" checked> Paypal<br>
+                            <input type="radio" name="sex" value="female"> Pago en Efectivo
                         </td>
-                        <td class="cart_description">
-                            <h4><a href="">Colorblock Scuba</a></h4>
-                            <p>Web ID: 1089772</p>
-                        </td>
-                        <td class="cart_price">
-                            <p>$59</p>
-                        </td>
-                        <td class="cart_quantity">
-                            <div class="cart_quantity_button">
-                                <a class="cart_quantity_up" href=""> + </a>
-                                <input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-                                <a class="cart_quantity_down" href=""> - </a>
-                            </div>
-                        </td>
-                        <td class="cart_total">
-                            <p class="cart_total_price">$59</p>
-                        </td>
-                        <td class="cart_delete">
-                            <a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
-                        </td>
+                        <td></td>
                     </tr>
+                    </tbody>
+                </table>
+            </div>
 
-                    <tr>
-                        <td class="cart_product">
-                            <a href=""><img src="images/cart/two.png" alt=""></a>
-                        </td>
-                        <td class="cart_description">
-                            <h4><a href="">Colorblock Scuba</a></h4>
-                            <p>Web ID: 1089772</p>
-                        </td>
-                        <td class="cart_price">
-                            <p>$59</p>
-                        </td>
-                        <td class="cart_quantity">
-                            <div class="cart_quantity_button">
-                                <a class="cart_quantity_up" href=""> + </a>
-                                <input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-                                <a class="cart_quantity_down" href=""> - </a>
-                            </div>
-                        </td>
-                        <td class="cart_total">
-                            <p class="cart_total_price">$59</p>
-                        </td>
-                        <td class="cart_delete">
-                            <a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
-                        </td>
+
+            <div class="table-responsive cart_info">
+                <table class="table table-condensed">
+                    <thead>
+                    <tr class="cart_menu">
+                        <td colspan="6" class="image">4. Datos de Usuario</td>
                     </tr>
+                    </thead>
+                    <tbody>
                     <tr>
-                        <td class="cart_product">
-                            <a href=""><img src="images/cart/three.png" alt=""></a>
-                        </td>
-                        <td class="cart_description">
-                            <h4><a href="">Colorblock Scuba</a></h4>
-                            <p>Web ID: 1089772</p>
-                        </td>
-                        <td class="cart_price">
-                            <p>$59</p>
-                        </td>
-                        <td class="cart_quantity">
-                            <div class="cart_quantity_button">
-                                <a class="cart_quantity_up" href=""> + </a>
-                                <input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-                                <a class="cart_quantity_down" href=""> - </a>
+                        <td>
+                            <div class="table-responsive cart_info">
+                                <table class="table table-condensed">
+                                    <thead>
+                                    <tr class="cart_menu">
+                                        <td colspan="6" class="image">No tengo una cuenta</td>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td class="cart_product">
+                                            Nombre <input type="text"><br>
+                                            Apellido <input type="text"><br>
+                                            Dirección <input type="text"><br>
+                                            Correo <input type="text">
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </td>
-                        <td class="cart_total">
-                            <p class="cart_total_price">$59</p>
-                        </td>
-                        <td class="cart_delete">
-                            <a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
+                        <td>
+                            <div class="table-responsive cart_info">
+                                <table class="table table-condensed">
+                                    <thead>
+                                    <tr class="cart_menu">
+                                        <td colspan="6" class="image">No tengo una cuenta</td>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td class="cart_product">
+                                            Usuario <input type="text"><br>
+                                            Contraseña <input type="text"><br>
+                                            <button>Ingresar</button>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
+
         </div>
     </section> <!--/#cart_items-->
 {% endblock section_one %}
